ISPN-15287 Run Hibernate 2LC tests against multiple versions (6.2, 6.3, 6.4)